--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
         <title>Bilal's Website</title>
     </head>
 
-    <body>
+    <body >
         <h1>Bilal's Portfolio</h1>
         <h2>I am a Web Developer</h2>
         <hr \>
+        <a href="./public/movie-ranking.html"><h4>Personal Ranking Project</h4></a>
+        <img height="180" src="./assets/images/Bilal first html project.png "  >
+        <a href="./public/birthday-invite.html"><h4>Birthday Invite Project</h4></a>
+        <img src="./assets/images/Bilal second html project.png" height="180" \>
+        <hr \>
+        <a href="./public/about.html">About Me </a>
+        <a href="./public/contact.html">Contact Me</a>
+
         
 
 
